--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="MyDBConnectionString" providerName="System.Data.SqlClient"
+		<add name="ConnectionString1" providerName="System.Data.SqlClient"
 			  connectionString="Data Source=localhost;Initial Catalog=MySQLServerDB; Integrated Security=true" />
 	</connectionStrings>
 </configuration>
